# coastline-classification

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
assets/: README.md
checkpoints/: README.md
configs/: README.md  classification_hr.example.yaml  classification_mr.example.yaml  extraction.example.yaml  paths.example.yaml
data/: README.md
docs/: 01_project_overview.md  02_repository_structure.md  03_environment_setup.md  04_configuration_guide.md  05_data_workflow.md  06_coastline_extraction.md  07_dataset_preparation.md  08_model_training.md  09_inference_and_products.md  10_evaluation_and_analysis.md  11_testing_and_debugging.md  12_development_guide.md  13_old_to_new_mapping_examples.md  README.md  build_summary.json  code_migration_inventory.csv  code_migration_report.md  data_preparation.md  platform_dependencies.md  project_manifest.json  security_and_privacy.md  workflow.md
examples/: README.md
examples/configs/: minimal_evaluation.yaml
examples/data/: classification_example.csv
outputs/: README.md
scripts/: README.md
scripts/dataset/: README.md  generate_sampling_points.py  split_dataset.py
scripts/evaluation/: README.md  analyze_transitions.py  evaluate_products.py
scripts/extraction/: README.md  calculate_indices.py  extract_coastline.py
scripts/inference/: README.md  generate_products.py
scripts/training/: README.md  train_hr.py  train_mr.py
src/: README.md
src/coastline/: README.md  (+2 more)
tests/: README.md  test_evaluation.py  test_indices.py  test_point_to_line.py  test_splitting.py  test_transition.py
(+40 files in other folders)
