[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coastline-classification"
version = "0.1.0"
description = "Remote-sensing workflows for coastline extraction and classification"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "NCX-ThsPool"}]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "PyYAML>=6.0",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "tqdm>=4.66",
]

[project.optional-dependencies]
geo = [
  "rasterio>=1.3",
  "geopandas>=0.14",
  "shapely>=2.0",
  "scipy>=1.11",
  "scikit-image>=0.22",
  "pyogrio>=0.7",
]
ml = [
  "torch>=2.2",
  "torchvision>=0.17",
  "timm>=0.9",
]
gee = [
  "earthengine-api>=0.1.390",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.3",
  "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
